# Harmony

./: .gitignore  CITATION.cff  CMakeLists.txt  DQSYM.rar  LICENSE  README.md  Small_Signal_Model_MMC.m  build_log.txt  closed loop PI.rar  ctest_opf.txt  environment.yml  fNET2SS_matpower_1.m  sources.cmake  taut.m  time_domain.m
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  help_question.yml
.github/workflows/: docs.yml  linux_build_and_test.yml  linux_build_and_test.yml.disabled  linux_run_examples.yml  macos_build_and_test.yml  macos_build_and_test.yml.disabled  macos_run_examples.yml  windows_build_and_test.yml  windows_build_and_test.yml.disabled  windows_run_examples.yml
Harmony/: Cable.cpp  Cable.h  Element.h  Eval_parameter.cpp  Harmony.vcxproj  Harmony.vcxproj.filters  Impedance.cpp  Impedance.h  Kron.cpp  Kron.h  Transmission_line.cpp  Transmission_line.h  Transmissionline.cpp  abcd_parameters.h  basic.h  eval_parameter.h  main.cpp  network.h  overhead_line.cpp  overhead_line.h  symbol.h  symengine_n.h
Harmony/Debug/: Harmony.ilk
Harmony/Harmony/: Cable.h  Harmony.vcxproj  Harmony.vcxproj.filters  Impedance.cpp  Transmission_line.cpp
Harmony_Cpp/: .gitignore  Eigen installation using vcpkg  Harmony.sln  Ipopt installation using vcpkg  SymEngine build using Cmake  SymEngine-Documentation  SymEngine_Build
Harmony_Cpp/Harmony/: AC_source.cpp  AC_source.h  Admittance.cpp  Admittance.h  Bus.cpp  Bus.h  Cable.cpp  Cable.h  ClassDiagram2.cd  Class_Diagram.cd  Constants.cpp  Controller.cpp  Controller.h  Element.cpp  Element.h  Eval_parameter.cpp  Filter.h  Generator.cpp  Generator.h  Harmony.sln  Harmony.vcxproj  Harmony.vcxproj.filters  Impedance.cpp  Impedance.h  Include_components.h  Kron.h  Load.cpp  Load.h  MMC.cpp  MMC.h  MyBasic.h  MySymbol.h  MySymbolicType.h  SymbolicType.h  Symengine_n.cpp  Transformer Delta Delta.cpp  Transformer Delta Delta.h  Transformer Delta Star.cpp  Transformer Delta Star.h  Transformer Y Delta.cpp  (+31 more)
Harmony_Cpp/tests/: CMakeLists.txt
Matlab_DP/: EMT_9_bus_1.slx  SS_IEEE_9_bus_dynamic phasor.slx  SS_IEEE_9_bus_revised.slx  SS_IEEE_9_bus_revised_dynamicPhasor1.slx  SS_IEEE_9_bus_time_domain.slx  SS_MMC_dynamic_phasor_small_signal.slx  SS_MMC_small_signal_time_domain_PR_control.slx  SS_MMC_time_domain_small_signal.slx  fGenerateInputSignals.m  fNET2SS_matpower.m
Matlab_HSS/: Small_Signal_Model_MMC.m  participation_factor.m  plot_fft.m  time_domain.m
Matlab_HSS/example_1/: Small_Signal_Model_MMC.m  Small_Signal_Model_MMC_v2.m  time_domain.m
Matlab_HSS/example_2/: Small_Signal_Model_MMC.m  Small_Signal_Model_MMC_v2.m  plot_fft.m  taut.m  time_domain.m
Matlab_PF/: ac14ac57.m  ac5.m  ac5ac9.m  ac5ac9ac14.m  acmtdcpf.jl  acmtdcpf.m  case5_stagg.m  case5_stagg_MTDCdroop.m  caseTest.m  create_ac.jl  create_dc.jl  makeYbus.jl  mtdc3droop.m  mtdc3slack.m  mtdc3slack_a.m  mtdc3slack_b.m  mtdc4slack.m  params_ac.jl  params_dc.jl  test.jl  test.m  test.text
benchmarking/: benchmarking.md
cmake/: dependencies.cmake  doxygen.cmake
docs/: Doxyfile.in  Eigen installation using vcpkg  Eigen installation using vcpkg.md  Ipopt installation using vcpkg  SymEngine build using Cmake.md  SymEngine install and build using vcpkg  SymEngine install and build using vcpkg.md  developer-guide.md  documentation-plan.md  input-file-format.md  installation.md  maintainer-guide.md  running-harmony.md
docs/doxygen/: README.md  groups.dox  mainpage.md
docs/manual/: 01-introduction.md  02-getting-started.md  03-core-concepts.md  04-building-networks.md  05-json-input.md  06-component-reference.md  07-analysis-workflows.md  08-examples-catalog.md  09-troubleshooting.md  10-command-line.md  11-harmony-ui.md  README.md
docs/old/: Eigen installation using vcpkg.md  Ipopt installation using vcpkg.md  SymEngine build using Cmake.md
input_file/: CMakeLists.txt  component_builder.cpp  component_builder.h  main.cpp  simulation_builder.cpp  simulation_builder.h
install/: HarmonyInstaller.sln  HarmonyInstaller.vdproj
install/res/: LICENSE.rtf
newbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Harmony.sln  Harmony.vcxproj  Harmony.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/: AC_current_source.cpp  AC_source.cpp  AC_source.h  Admittance.h  Bus.cpp  Bus.h  Cable.cpp  Capacitor.cpp  Capacitor.h  ClassDiagram2.cd  ClassDiagram2.emf  Constants.cpp  Constants.h  Control_block.cpp  Control_block.h  Controller.cpp  Controller.h  Element.cpp  Element.h  Generator.h  Harmony.sln  Harmony.vcxproj  Harmony.vcxproj.filters  Impedance.cpp  Impedance.h  Include_components.h  Include_control_blocks.h  Inductor.cpp  Inductor.h  Load.cpp  Load.h  MMC.cpp  MMC.h  Powerflow.cpp  Powerflow.h  Powerflow_data.cpp  Powerflow_network_params.cpp  Powerflow_solver.cpp  Resistor.cpp  Resistor.h  (+63 more)
src/Control/: Control_block.cpp  Control_block.h  Controller.cpp  Controller.h  Filter.cpp  Filter.h  Integrator.cpp  Integrator.h
src/Elements/: Element.cpp  Element.h
src/assets/: harmony_ascii_banner.txt
src/data/: ac5_branch_ac.csv  ac5_bus_ac.csv  ac5_gen_ac.csv  ac5_gencost_ac.csv  ac9ac14_res_ac.csv  mtdc3_conv_dc.csv
src/examples/: Examples.h  example.json  example_DQsym_DSSS2.cpp  example_DQsym_MMC_controlled.cpp  example_DQsym_RLC.cpp  example_DQsym_Simple_MMC.cpp  example_DQsym_math_operations.cpp  example_DQsym_validation.cpp  example_MMC.cpp  example_OHL.cpp  example_OPF.cpp  example_OPF_1.cpp  example_OPF_PV.cpp  example_OPF_WT.cpp  (+18 more)
src/input_file/: CMakeLists.txt  component_builder.cpp  component_builder.h  main.cpp  simulation_builder.cpp
tests/: CMakeLists.txt  testABCDforming.cpp  testJsonPipeline.cpp  testMMC.cpp  testOPF.cpp  testSimpleNetwork.cpp  testStabilityEstimate.cpp  testadmittance.cpp  testcapacitor.cpp  testelement.cpp  testexamples.cpp  testimpedance.cpp  testinductor.cpp  testload.cpp  testrealtransformer.cpp  testresistor.cpp  teststatespacemodel.cpp  testswitch.cpp  testtransformerclassic.cpp  utils.cpp  utils.h
tests/data/: l1.csv
(+258 files in other folders)
